--- a/CS/GanttRestrictions/app.config
+++ b/CS/GanttRestrictions/app.config
@@ -1,10 +1,8 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="GanttRestrictions.Properties.Settings.GantTest01ConnectionString"
-            connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename=|DataDirectory|\GantTest01.mdf;Integrated Security=True;User Instance=True"
-            providerName="System.Data.SqlClient" />
+        <add name="GanttRestrictions.Properties.Settings.GantTest01ConnectionString" connectionString="Data Source=(localdb)\mssqllocaldb;AttachDbFilename=|DataDirectory|\GantTest01.mdf;Integrated Security=True;" providerName="System.Data.SqlClient"/>
     </connectionStrings>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/></startup></configuration>
